# phantom-orchestra

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.template.toml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
containers/app/: Dockerfile
docs/: api-reference.md  architecture.md  configuration.md  development.md
examples/01-hello-world/: README.md  main.py
examples/02-file-operations/: README.md  main.py
examples/03-custom-performer/: README.md  main.py
examples/04-api-client/: README.md  main.py
phantom/: __init__.py  main.py  version.py
phantom/conductor/: __init__.py  app.py  models.py  session_manager.py  websocket.py
phantom/conductor/routes/: __init__.py  health.py  sessions.py
phantom/performer/: __init__.py  base.py  codeact.py  director.py  memory.py  scene.py
phantom/score/: __init__.py  loader.py  orchestra_config.py  performer_config.py  stage_config.py  voice_config.py
phantom/signal/: __init__.py  base.py  channel.py  codec.py  depot.py
phantom/signal/directive/: __init__.py  base.py  control.py  filesystem.py  message.py  terminal.py
phantom/signal/report/: __init__.py  base.py  control.py  fault.py  filesystem.py  terminal.py
phantom/stage/: __init__.py  base.py  container_stage.py  factory.py  local_stage.py
phantom/toolkit/: __init__.py  async_utils.py  logging.py
phantom/vault/: __init__.py  base.py  factory.py  local_vault.py  memory_vault.py
phantom/voice/: __init__.py  capabilities.py  message.py  provider.py  registry.py
tests/: conftest.py
tests/integration/: test_local_workflow.py
tests/unit/conductor/: test_models.py
tests/unit/performer/: test_base.py  test_memory.py  test_scene.py
tests/unit/score/: test_configs.py
tests/unit/signal/: test_base.py  test_channel.py  test_codec.py  test_depot.py  test_directives.py  test_reports.py
tests/unit/stage/: test_factory.py  test_local_stage.py
tests/unit/toolkit/: test_async_utils.py  test_logging.py
tests/unit/vault/: test_factory.py  test_local_vault.py  test_memory_vault.py
tests/unit/voice/: test_message.py  test_provider.py
