[tool.poetry]
name = "phantom-orchestra"
version = "0.1.0"
description = "AI-driven autonomous task orchestration platform"
authors = ["PhantomOrchestra Contributors"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/phantom-orchestra/phantom-orchestra"
repository = "https://github.com/phantom-orchestra/phantom-orchestra"
documentation = "https://phantom-orchestra.readthedocs.io"
keywords = ["ai", "agent", "automation", "llm", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{include = "phantom"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = ">=0.115.0,<1.0.0"
uvicorn = {extras = ["standard"], version = ">=0.30.0"}
pydantic = ">=2.7.0"
litellm = ">=1.40.0"
structlog = ">=24.1.0"
aiohttp = ">=3.9.0"
httpx = ">=0.27.0"
toml = ">=0.10.2"
python-dotenv = ">=1.0.0"
websockets = ">=12.0"
python-multipart = ">=0.0.9"
anyio = ">=4.0.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.15.0"
mypy = ">=1.10.0"
pytest = ">=8.2.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=5.0.0"
pytest-mock = ">=3.14.0"
pytest-timeout = ">=2.3.0"
httpx = ">=0.27.0"  # for TestClient
pre-commit = ">=3.7.0"
types-toml = "*"

[tool.poetry.scripts]
phantom = "phantom.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "PT", "RUF"]
ignore = ["S101", "S603", "S607", "B008", "A003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=phantom --cov-report=term-missing --cov-report=xml -v"

[tool.coverage.run]
source = ["phantom"]
omit = ["tests/*", "*/conftest.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
